# acc-engineer-server

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  service.cpp  service.h
proto/: rpc.proto  service.capnp  service.proto
src/: config.cpp  config.h  gui_log_sink.cpp  gui_log_sink.h  gui_sink.cpp  gui_sink.h  main.cpp  main_gui.cpp  rpc.cpp  rpc.h  service.cpp  service.h
src/detail/rpc/: method.h  types.h
src/rpc/: await_ec.h  batch_task.h  client.h  error_code.h  method.h  method_group.h  methods.h  result.h  server.h  stub.h  timed_operation.h  types.h
src/rpc/detail/: await_ec.h  await_error_code.h  batch_task.cpp  batch_task.h  datagram_stub.h  error_code.h  method.h  method_type_erasure.h  packet_handler.h  stream_stub.h  stub.h  stub_base.cpp  stub_base.h  timed_operation.h  type_requirements.h  types.h
src/service/: config.h  service.cpp  service.h
src/ui/: gui_sink.cpp  gui_sink.h  launcher.cpp  launcher.h
test/: CMakeLists.txt  main.cpp  test_channel.cpp  test_client.cpp  test_dynamic_parallel_group.cpp  test_rpc.cpp
ui/: launcher.ui
